<resources>
    <string name="app_name">VisaHackathon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_label">Home</string>
    <string name="menu_label">Menu</string>
    <string name="map_label">Map</string>
    <string name="community_label">Community Leaderboard</string>
    <string name="user_label">User Leaderboard</string>
    <string name="profile_label">Profile</string>
    <string name="network_label">Merchant Network</string>
    <string name="donate_label">Donate</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>